--- a/ejercicios/01.md
+++ b/ejercicios/01.md
@@ -118,16 +118,20 @@ const dataPath = path.resolve("./src/data/alumnos.json");
 class AlumnoRepository {
   // Método para guardar alumno (ya existe)
 
-  // 👉 Completa este método
+  // Completa este método
   _________() {
     return new Promise((resolve, reject) => {
-      fs.readFile(dataPath, "utf-8", (err, data) => {
+      
+      fs.readFile(________, "utf-8", (err, data) => {
         if (err) {
-          if (err.code === "ENOENT") return resolve([]); // Archivo vacío
+          // ¿Si el archivo esta vácio que se debe de regresar?
+          if (err.code === "ENOENT") return resolve(______); 
+
+          // Si hay un error relacionado con la lectura del archivo
           return reject(err);
         }
 
-        const alumnos = JSON.parse(data || "[]");
+        const alumnos = JSON.parse( _______ || "[]");
         resolve(_________);
       });
     });
